# LinkOps-SOAR-Copilot

./: .env.example  .gitignore  EXTERNAL_ARTIFACTS_MANIFEST.json  LAUNCH-FULL-WHIS.sh  LAUNCH.sh  Makefile  QUICK_START.md  README.md  RELEASE_MANIFEST.json  RELEASE_MANIFEST.template.json  Whis-Tree.txt  claude-code.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_production.txt  security_audit_results.json  training_queue.jsonl  whis_production_api.py
.claude/: settings.local.json
.github/workflows/: quality-gates.yml
ai-training/: 01_Data_Preprocessing_Hub.ipynb  README.md  ai-train-Tree.txt  attack_chain_analyzer.py  training_pipeline.py  use_schema.json
ai-training/ci/: index_refresh.py
ai-training/cli/: whis_status.py
ai-training/configs/: config_manager.py  data_governance.yaml  eval.yaml  model.whis.yaml  monitoring.yaml  rag.yaml  security.yaml
ai-training/core/: logging.py
ai-training/eval/: run_eval.py
ai-training/feature_store/: create_features.py
ai-training/fine_tune/: lora_train.py
ai-training/llm/: README.md
ai-training/models/: isolation_forest_anomaly.py
ai-training/monitoring/: telemetry.py
ai-training/notebooks/: 01_Anomaly_Detection_Experiments.ipynb  02_Deep_Learning_Experiments.ipynb  03_Model_Promotion_Pipeline.ipynb
ai-training/rag/: README_EXPANSION_PACKS.md  delta_indexing.py  embed.py  hybrid_retrieval.py  repo_ingestion.py  soc_ingestion.py
ai-training/registry/: model_registry.py
ai-training/scripts/: cli.py  download_forensics_datasets.py  monitor_training.py  train_chunked.py  train_now.py  train_simple.py  train_soar_model.py
ai-training/security/: SECURITY_CHECKLIST.md  model_security.py
ai-training/teacher-loop/: teacher_pipeline.py
apps/api/: demo_endpoints.py  hec_client.py  main.py  rag_chat_api.py  schemas.py  validators.py  whis_integrated_server.py  whis_minimal_api.py
apps/ui/: notebook_interface.py  pipeline_monitor.py  ui_contract.json  ui_reflector.json  whis-dashboard.html
apps/workers/: manual-monitoring.py  prometheus.yml
configs/: model.whis.yaml
data/alert_queue/: alert_gap_002c5f399031.json  alert_gap_002c85acfab2.json  alert_gap_018def291586.json  alert_gap_02cafa861a6d.json  alert_gap_038620730c5c.json  alert_gap_069026bd65f4.json  alert_gap_09a390c1091d.json  alert_gap_0cffd1919cc8.json  alert_gap_0dfa7e437566.json  alert_gap_0e00a394b325.json  alert_gap_0e226aafccd2.json  alert_gap_0ea2566c46fc.json  alert_gap_10ad6df12f05.json  alert_gap_12340759b9be.json  alert_gap_135aadd6c3a9.json  alert_gap_151dfb3fe5a6.json  alert_gap_1578a918b2f4.json  alert_gap_16843be7cff6.json  alert_gap_17afc0589877.json  alert_gap_1bb0405d8d5f.json  alert_gap_1f79bafb4be4.json  alert_gap_21bc63f02865.json  alert_gap_231ed807a4d2.json  alert_gap_242f5efe26d0.json  alert_gap_24cd33911775.json  alert_gap_26c98afd04b3.json  alert_gap_28ce9688ad10.json  alert_gap_29de633c6716.json  alert_gap_2c4f34a30fca.json  alert_gap_2fde74b8b214.json  alert_gap_303c7b781f3f.json  alert_gap_324e03030f3c.json  alert_gap_327128133470.json  alert_gap_333de2b1e925.json  alert_gap_33bfad933b7d.json  alert_gap_3765e3e8e25b.json  alert_gap_38f87d49e6b5.json  alert_gap_3b4772cdddde.json  alert_gap_3cd0d35076af.json  alert_gap_3e8ed51f7496.json  (+117 more)
docs/: ARCHITECTURE.md  DATA_GOVERNANCE.md  DEBUG_TAGS.md  DEPLOYMENT_CHECKLIST.md  HOW_ENGINE.md  MANIFESTS.md  OPERATIONS.md  RAG_SHARDS.md  README_OLD.md  RELEASE_NOTES.md  REPO_CLEANUP_PLAN.md  SENIOR_DECISIONS.md  SOAR_ARCHITECTURE_MAP.md  SOAR_SYSTEM_OVERVIEW.md  WHIS_RED_TEAM_READINESS.md  Whis-Tree-old.txt  enhanced-rag-knowledge.md  secops-interview-cram.md
documentation/: QUALITY_GATES.md  RED_VS_BLUE_LAB.md
documentation/playbooks/: brute-force-response.md  registry.yaml
infrastructure/: deploy.sh
infrastructure/scripts/: install-monitoring.ps1
infrastructure/terraform/: main.tf  terraform.tfvars.example  variables.tf
monitoring/: alertmanager.yml  docker-compose.monitoring.yml  grafana-config.yml  ingest_canary.py  prometheus.yml  whis-dashboard.json  whis_alerts.yml
operator-dashboard/: start_dashboard.py
red-blue-lab/: README.md  deploy_lab.sh  destroy_lab.sh
results/: chunk_1_progress.json  chunk_2_progress.json  chunk_3_progress.json  chunk_4_progress.json  chunk_5_progress.json  comprehensive_whis_eval_results.json  final_training_summary.json  model_test_results.json  pipeline_validation.json  preflight_results_preflight_1755979334.json  siem-validation-results.json  training_readiness.json
scripts/: activate-live-rag.py  activate-whis-ai.py  deploy-production.sh  download_forensics_datasets.py  download_siem_datasets.py  download_soar_datasets.py  externalize-artifacts.py  fix_comprehensive_index.py  integrate_external_datasets.py  launch-monitoring.py  merge_rag_indices.py  preflight-validation.py  production-validation.py  quarantine-enforcer.py  run_shadow_drill.sh  shadow_mode_drill.py  start-integrated-api.sh  train-whis-production.py  vectorize_open_malsec.py
soar-platform/: README.md  SOAR_ARCHITECTURE.md
tests/: ci_quality_check.py  final_elite_test.py  golden_set.py  live_whis_results.json  live_whis_testing.py  mentor_validation.json  pipeline_validation.py  quality_gate_results.json  quality_gates.py  red_team_scenarios.json  red_team_validator.py  run_late_night_training.py  test_elite_soar.py  test_expanded_knowledge.py  test_manual_soar.py  test_quality_gates.py  test_senior_decisions.py  test_trained_model.py  test_whis_complete.py  ultimate_production_test.py  whis_training_questions.py  whis_training_report.json
tools/: gpu_sanity.sh  push_to_hf.py  siem-validation.py
ui/: whis_operator_ui.py
whis-api/: README.md  normalizer.py  senior_decisions.py  start_api.py
whis-frontend/: README.md  app.py  run.sh
(+1049 files in other folders)
